image rotates every second

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link 
 </head>
 <body>
-  <h1>Hello World!</h1>  
+  <h1>What kind of pics?</h1>  
+  <div>
+    <img src="assets/1.png" id="main-pic">
+  </div>
+  <form id="get-photos">
+    <input type="text" id="sbx">
+    <button id="btn" type="submit">Fetch photos</button><br>
+  </form>
+  <button id="st-btn">Stop Photostream</button>
 </body>
 </html>
